--- a/samurai-way/package.json
+++ b/samurai-way/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
