--- a/samurai-way-2/package.json
+++ b/samurai-way-2/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
+    "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.10",
     "prettier": "2.7.1",
