--- a/samurai-way-2/package.json
+++ b/samurai-way-2/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/redux-form": "^8.3.5",
     "@types/reselect": "^2.2.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "antd": "^4.23.6",
@@ -31,6 +32,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
