--- a/react-fundamentals/package.json
+++ b/react-fundamentals/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.8.4",
