--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -14,7 +14,11 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -47,9 +51,11 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
+    "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
 }
