--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -12,11 +12,14 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
