--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
-    "react-loading-skeleton": "^3.1.0",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
