--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -15,6 +15,7 @@
     "@types/react-paginate": "^7.1.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "react": "^18.2.0",
