--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-paginate": "^7.1.1",
+    "ahooks": "^3.7.2",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
