--- a/goods-shop/.eslintrc
+++ b/goods-shop/.eslintrc
@@ -15,5 +15,7 @@
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "react/prop-types": "off"
+  }
 }
