--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
     "react-toastify": "^9.1.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
