--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -7,22 +7,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.190",
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/react-paginate": "^7.1.1",
     "ahooks": "^3.7.2",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "firebase": "^9.14.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.6.15",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
@@ -31,8 +28,8 @@
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
-    "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,6 +58,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.190",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/react-paginate": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
@@ -68,6 +71,7 @@
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3"
   }
 }
