GOODS-[FEAT]: Authentification done
Created ability to login and register new account for user, only
when user is auth. he can make orders

--- a/goods-shop/.eslintrc
+++ b/goods-shop/.eslintrc
@@ -16,6 +16,9 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off"
   }
 }
