--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-paginate": "^8.1.4",
+    "react-phone-number-input": "^3.2.13",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -64,6 +65,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-paginate": "^7.1.1",
+    "@types/react-text-mask": "^5.4.11",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
