--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,13 +16,14 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
-    "framer-motion": "^7.6.15",
+    "framer-motion": "^7.6.18",
     "lodash": "^4.17.21",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
     "react-phone-number-input": "^3.2.13",
     "react-redux": "^8.0.5",
