GOODS-[FEAT]: User in redux and sessionStorage
Now main user properties are saved in redux and products are
persisted in sessionStorage

--- a/goods-shop/.gitignore
+++ b/goods-shop/.gitignore
@@ -5,6 +5,13 @@
 /.pnp
 .pnp.js
 
+### VisualStudioCode ###
+.vscode/*      # Maybe .vscode/**/* instead - see comments
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+
 # testing
 /coverage
 
