--- a/goods-shop/package.json
+++ b/goods-shop/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
+    "swiper": "^8.4.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
